--- a/deploy/argocd/worker.yaml
+++ b/deploy/argocd/worker.yaml
@@ -12,15 +12,18 @@ spec:
     server: "https://kubernetes.default.svc"
   source:
     repoURL: "https://lexfrei.github.io/charts"
-    targetRevision: "0.1.3"
+    targetRevision: "0.2.0"
     chart: frame
     helm:
       values: |
         image:
           repository: "ghcr.io/lexfrei/worker"
-          tag: "sha-665e6f4"
+          tag: "sha-0878789"
         env:
           REDIS_HOST: "redis-frame"
+          PSQL_HOST: "db-frame"
+        service:
+          enabled: false
   syncPolicy:
     automated:
       prune: true
